feat(import): multivalued attribute can now be imported as CSV with multi values (#451)
Closes #444